Revision history for JSON-Schema-Modern

{{$NEXT}}
          - the "specification_version" configuration option now accepts
            values without "draft" in the name, to facilitate a new naming
            convention used for future specification versions

0.550     2022-04-14 04:32:32Z
          - added 'dump' method to Result, Error and Annotation objects, for
            easier debugging and generating test output
          - adjusted syntax checks for $vocabulary keyword to allow for
            bundled metaschemas
          - new validate_schema() method, for easily validating a schema
            against its metaschema

0.549     2022-03-22 03:55:15Z
          - properly detect the metaschema in json-schema-eval
            --validate-schema

0.548     2022-03-09 06:27:10Z
          - "annotate_unknown_keywords" option removed; behaviour is now on
            for draft2020-12 and off otherwise
          - annotation behaviour for applicator keywords is fixed per the
            spec, resulting in fewer redundant errors from unevaluatedItems,
            unevaluatedProperties keywords

0.547     2022-03-03 06:08:51Z
          - improved error stringification on document error

0.546     2022-02-23 01:33:03Z
          - avoid use of newly-experimental signature syntax on 5.35.9

0.545     2022-02-22 04:30:36Z
          - avoid new experimental warning on 5.35.9
          - skip unresolvable identifiers for future drafts in acceptance
            tests (added in TJSA 1.016)

0.544     2022-02-16 05:53:08Z
          - add_schema() now has more consistent exception handling

0.543     2022-02-11 04:11:55Z
          - now allowing runtime overriding of the "strict" configuration
          - add "effective_base_uri", for adjusting the locations of errors
            and annotations against a dynamic base

0.542     2022-01-23 08:17:08Z
          - new "strict" option (and --strict flag to json-schema-eval), for
            disallowing unknown keywords
